# aioserve

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: simple_api.py
src/aioserve/schemas/: base_scope.py  datastructures.py  request.py  response.py
src/aioserve/server/: __init__.py  app.py  http.py
tests/: test_http.py  test_middleware.py
